package com.loanflow.enums;

public enum AdminAccessLevel {
    FULL_CONTROL,
    READ_ONLY,
    LOAN_APPROVE
}
