package com.loanflow.enums;

public enum BureauStatus {
    AVAILABLE,
    FETCHED,
    UNAVAILABLE
}
