package com.loanflow.enums;

public enum EmiStatus {
    PENDING,
    PAID,
    OVERDUE
}