package com.loanflow.enums;

public enum EntityType {
    ADMIN_PROFILE,
    BORROWER_PROFILE,
    LOAN_OFFICER_PROFILE,
    USER,
    ADDRESS,
    LOAN_APPLICATION,
    LOAN,
    EMI_SCHEDULE,
    PAYMENT,
    OVERDUE_TRACKER,
    NOTIFICATION
}
