package com.loanflow.enums;

public enum LoanStatus {
    ACTIVE,
    CLOSED,
    DEFAULTED,
    WRITTEN_OFF
}
