package com.loanflow.enums;

public enum LoanStrategy {
    FLAT_RATE_LOAN,
    REDUCING_BALANCE_LOAN,
    STEP_UP_EMI_LOAN
}
