package com.loanflow.enums;

public enum NotificationEventType {
    APPLICATION_SUBMITTED,
    LOAN_APPROVED,
    LOAN_REJECTED,
    EMI_PAID,
    PAYMENT_REMINDER,
    OVERDUE_ALERT,
    LOAN_CLOSED,
    PENALTY_APPLIED
}
