package com.loanflow.enums;

public enum NotificationStatus {
    QUEUED,
    SENT,
    FAILED
}
