package com.loanflow.enums;

public enum NotificationType {
    EMAIL
    // in future we can add SMS, PUSH, etc.
}
