package com.loanflow.enums;

public enum PaymentMode {
    SIMULATION
    //in future we can add UPI, NET_BANKING, CARD etc.
}
