package com.loanflow.enums;

public enum PenaltyStatus {
    APPLIED,
    SETTLED,
    UNPAID
}
