package com.loanflow.enums;

public enum Role {
    ADMIN,
    BORROWER,
    LOAN_OFFICER,
    SYSTEM
}
